data/test/method_as_function/positive/1002.js
const axios = require('axios');
const requestBody = {
    name: 'name',
    tag: 'tag'
};
axios.post('https://petstore.swagger.io/v2/pets', requestBody);