data/test/method_as_function/negative/1000.js
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/pets', {
    name: 'name',
    tag: 'tag'
});